# zengin_viewer

./: .gitignore  Cargo.toml  README.md  present_nodes.txt
assets/: present_nodes.txt
misc/: debug_script.txt
src/: character.rs  game.rs  gothic_asset_loader.rs  gothic_mesh.rs  gothic_texture_asset.rs  gui.rs  main.rs  skybox.rs  toggle_visibility.rs  zengin.rs  zengin_resources.rs
src/game/: disco_lamp.rs  objects.rs  objects_to_entities.rs
src/zengin/: common.rs  loader_asset.rs  loaders.rs  macros.rs  mesh.rs  mesh_model.rs  mesh_morph.rs  mesh_mrs.rs  script.rs  script_vm.rs  visual.rs  world.rs
src/zengin/loaders/: animation.rs  model.rs  texture.rs  vdf_reader.rs
src/zengin/script/: memory.rs  parse.rs  script.rs  script_host.rs  script_host_unimplemented.rs  script_vm.rs
src/zengin/visual/: material.rs  mesh.rs  mesh_model.rs  mesh_morph.rs  mesh_mrs.rs
