[package]
name = "ZenGinViewer"
version = "0.1.0"
edition = "2024"


[dependencies]
bevy = { version = "0.18.1", features = ["dynamic_linking", "bevy_dev_tools", "free_camera", "debug"] }
avian3d = "0.6.0"
byteorder = "1.5"
ZenKit-rs = { git = "https://github.com/mmcomando/ZenKit-rs.git", rev = "956f4d9a157120425e3022e68c9628125dfac4d3" }
ron = "0.12.0"
serde = "1.0.228"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
